--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,6 +187,15 @@
 		border-top: 3px solid #9e4f60;
 		border-left: none;
 		width: 100%;
+		h2 {
+			font-size: 1.75rem;
+		}
+		h3 {
+			font-size: 1.25rem
+		}
+		span {
+			font-size: 1rem;
+		}
 	}
 }
 
