--- a/src/components/single-item-page-styles.scss
+++ b/src/components/single-item-page-styles.scss
@@ -7,30 +7,52 @@
     flex-direction: column;
     margin-block-start: 1rem;
 	
-	.page-img-container:has(img[src*="Starships"]) {
-		place-content:stretch;
-		img {
-			min-height: 100%;
-			object-fit: cover;
+	.page-description-container {
+		background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
+		background-size: 8px;
+		background-repeat: repeat-x;
+		background-color: #282727;
+		color: #ddd;
+		border-left: 3px solid #9e4f60;
+		width: 50%;
+		flex-grow: 1;
+		h1 {
+			font-size: 1.50rem
 		}
-	}
-	@media (min-width: 576px) and (max-width: 768px) {
-		&:has(img[src*="vignette"]) {
-			flex-direction: row;
-			.page-description-container {
-			border-left: 3px solid #9e4f60;          
-			border-top: none;
-			}
+		h3 {
+			font-size: 0.9rem;
+		}
+		span {
+			font-size: 0.75rem;
+			display: block;
+			color: #999;
 		}
 	}
 	
+	.page-img-container {
+		display: grid;
+		width: 50%;
+		&:has(img[src*="Planets"]) {
+			place-content:center;
+		}
+	}
+	img {
+		width: 100%;
+		max-height: calc(min(29vh, 600px));
+		min-height: 100%;
+		object-fit: cover;
+	}
 	img[src*="vignette"] {
-			object-fit: cover;
-			object-position: top;
+		object-position: 50% 15%;
 	}
 	img[src*="Films"] {
-			object-position: bottom;
-		}
+		object-position: bottom;
+	}
+	img[src*="Planets"] {
+		clip-path: circle(45%);
+		max-height: calc(min(29vh, 400px));
+		object-fit: contain;
+	}
 	
 	@media (max-width: 575px) {
 		max-width: calc(min(94vw, 540px));
@@ -39,20 +61,20 @@
 			object-position: 50% 15%;
 		}
 	}
+	@media (min-width: 576px) and (max-width: 768px) {
+		&:has(img[src*="vignette"], img[src*="Films"]) {
+			flex-direction: row;
+			.page-description-container {
+				border-left: 3px solid #9e4f60;          
+				border-top: none;
+			}
+		}
+	}
 	@media (min-width: 576px) {
         margin-block-start: 2rem;
 		max-width: calc(min(90vw, 758px));
 		min-height: 65vh;
-		max-height: 600px;
-		
-		img[src*="vignette"] {
-			min-height: 100%;
-		}
-		
-		.page-img-container:has(img[src*="Films"]) {
-			object-position: top;
-			place-content:stretch;
-		}
+		max-height: max-content;
 	}
 	@media (max-width: 768px) {
 		.page-description-container  {
@@ -60,162 +82,75 @@
 			border-left: none;
             width: 100%;
 		}
+		.page-img-container {
+			width: 100%;
+		}
+		img {
+			max-height: calc(min(29vh, 600px));
+			object-fit: cover;
+		}
+		img[src*="Planets"] {
+			object-fit: contain;
+			clip-path: circle(29vw);
+			margin-bottom: 1rem;
+		}
+		img[src*="Yavin4"] {
+			max-height: 35vh;
+			clip-path: circle(120px);
+		}
 	}
 	@media (min-width: 768px) {
-        & {
-            flex-direction: row;
-        }
+        flex-direction: row;
 		h1 {
 			font-size: 1.75rem;
 			padding-inline-start: 0;
 		}
+		img[src*="Planets"] {
+			max-height: calc(max(29vh, 400px));
+		}
 	}
 	@media (min-width: 992px) {
-		&:has(img[src*="vignette"]) {
-			max-height: 500px;
-		}
-	}
-}
-
-.page-description-container {
-	background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
-	background-size: 8px;
-	background-repeat: repeat-x;
-	background-color: #282727;
-	color: #ddd;
-	border-left: 3px solid #9e4f60;
-	width: 50%;
-	flex-grow: 1;
-	h1 {
-		font-size: 1.50rem
-	}
-	h3 {
-		font-size: 0.9rem;
-	}
-	span {
-		font-size: 0.75rem;
-		display: block;
-		color: #999;
-	}
-}
-
-.page-img-container {
-	display: grid;
-	place-content: stretch;
-	width: 50%;
-	img {
-		width: 100%;
-	}
-	img[src*="Planets"] {
-		clip-path: circle(45%);
-	}
-	&:has(img[src*="Films"]) {
-		object-fit: center;
-	}
-	&:has(img[src*="vignette"]) {
-		place-content: stretch;
-	}
-	
-	img[src*="Films"] {
-		object-fit: cover;
-		min-height: 100%;
-	}
-	@media (min-width: 992px) {
-		&:has(img[src*="Films"]) {
-		object-position: bottom;
-	}
-	}
-	@media (max-width: 768px) {
-		& {
-			width: 100%;
-		}
-		
-		img {
-			max-height: calc(29vh);
-			object-fit: contain;
-		}
-		img[src*="Films"], img[src*="vignette"] {
-			object-fit: cover;			
-		}
-        &:has(img[src*="Planets"]) {
-		img {
-			clip-path: circle(29vw);
-			margin-bottom: 1rem;
-		  }
-	}
-	}
-	@media (min-width: 768px) {
-		img:not([src*="Planets"], [src*="Starships"]) {
-		max-height: 58vh;
-	}
-		& {
-			place-content: center;
+		img[src*="Films"] {
+			object-position: center;
 		}
 	}
 }
 
 // Styles for tablets
-@media (min-width: 700px) /*and (max-width: 992px)*/ and (orientation: portrait) {
+@media (min-width: 700px) and (orientation: portrait) {
 	.main {
 		min-height: calc(min(65vh, 500px));
+	}
+	img[src*="Films"] {
 		max-height: max-content;
 	}
-	.page-img-container {
-			img {
-				max-height: calc(min(33vh, 300px))
-			}
-		}
-		
 }
-@media (min-width: 768px) /*and (max-width: 992px)*/ and (orientation: portrait) {
+@media (min-width: 768px) and (orientation: portrait) {
 	.main {
         margin-block-start: 2rem;
 		flex-direction: row;
 		min-height: calc(min(65vh, 500px));
-		max-height: max-content;
 	}
-	
-	.main:has(img[src*="Planets"], img[src*="Starships"]) {
-		flex-direction: column;
-		.page-description-container {
-			border-top: 3px solid #9e4f60;
-			border-left: none;
-			}
-		.page-img-container {
-			img {
-				max-height: calc(min(33vh, 300px))
-			}
-		}
-	}
-	.main:has(img[src*="Starships"]), .main:has(img[src*="Planets"]) {
-		// max-width: calc(max(85vw, 540px));
-		// min-height: calc(min(70vh, 800));
-		// max-height: auto;
-	}
-	
 	.page-img-container {
-		width: 100%;
 		place-content: center;
-		img {
-			max-height: 29vh;
-		}
 	}
 	.page-img-container:has(img[src*="vignette"]) {
 		place-content: stretch;
 		img {
-			max-height: calc(min(29vh), 300px);
+			max-height: calc(min(29vh, 300px));
 			object-fit: cover;
 		}
+	}
+	.page-img-container:has(img[src*="Starships"]) {
+		place-content: stretch;
+	}
+	img {
+		max-height: max-content;
 	}
 	img[src*="Planets"] {
 		max-height: 33vh; 
 	}
-	
 	.page-description-container {
-		border-left: 3px solid #9e4f60;
-		border-top: none;
-		width: 100%;
-		flex-grow: 1;
 		h2 {
 			font-size: 1.75rem;
 		}
