update single item page styles
* single item page styles work in progress

* update styles at SingleStarship page

* Add scroll to top when navigation trough pages occurs

* update styles for Landing animation & change letter-spacing

* Update ListOfFilms.jsx and styles for Starships page

* Update SinglePlanet.jsx and its styles

* update font-size for portrait orientation devices

* styles work in progress

* Update styles.scss

* add single-item-page-styles.scss

* Update 10 files styles work in progress

* Update SinglePlanet.jsx and single-item-page-styles.scss -> work in progress

* Update single-item-page-styles.scss

* Update single-item-page-styles.scss and styles.scss

--- a/src/base.scss
+++ b/src/base.scss
@@ -9,12 +9,15 @@
 body {
 	background-image: url('https://res.cloudinary.com/dn9mr6kwc/image/upload/v1666519655/Starwars%20miniproject/star-wars-background-img_cpqurg.jpg');
 	font-family: 'Orbitron', sans-serif;
-	letter-spacing: 1.35px;
+	letter-spacing: 1.25px;
 	min-height: 100vh;
 	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
 	line-height: 1.5;
 }
+// .app {
+// 	min-height: 100%;
+// }
 
 a {
 	text-decoration: none;
@@ -31,4 +34,3 @@ select {
 	font-size: inherit;
 	font: inherit;
 }
-
