--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,4 @@
-.app {
-	min-height: 100%;
-}
-.main-wrapper {
-	margin-inline: auto;
-	width: calc(min(90vw, 1100px));
-}
-
+//Grid pages styles
 .grid-container {
 	max-width: calc(min(90vw, 1200px));
 	margin-inline: auto;
@@ -17,36 +10,37 @@
 .grid-element-card {
 	display: flex;
 	flex-direction: column;
-	border-radius: 5px;
+	border-radius: 15px;
 	overflow: hidden;
-	height: 60vh;
+	max-height: calc(min(375px, 45vh));
 }
 
 .grid-card-hero {
-	height: 70%;
+	height: 63%;
 	overflow: hidden;
-}
-
-.grid-card-hero-img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	transition: transform 0.25s ease-in-out;
-	&:hover {
-		transform: scale(1.05);
-	}
+	.grid-card-hero-img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		transition: transform 0.25s ease-in-out;
+		&:hover {
+			transform: scale(1.05);
+		}
+		&[src*="vignette"] {
+			object-position: (50% 30%);
+		}
+	}	
 }
 
 .grid-card-info {
-	height: 30%;
+	height: 37%;
 	border-top: 2px solid #9e4f60;
 	background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
 	background-size: 7px;
 	background-repeat: repeat-x;
 	h4 {
-		font-size: 18px;
+		font-size: 1.5rem;
 		color: #ddd;
-		display: inline-block;
 		transition: color 275ms cubic-bezier(0.075, 0.82, 0.165, 1);
 		&:hover {
 			cursor: pointer;
@@ -54,7 +48,7 @@
 		}
 	}
 	p {
-		font-size: 14px;
+		font-size: 1rem;
 	}
 }
 
@@ -63,85 +57,42 @@
 		gap: 1rem;
 	}
 	.grid-element-card {
-		height: 16vh;
+		height: 20vh;
 		flex-direction: row;
 	}
 	.grid-card-hero {
-		height: 100%;
+		min-height: 100%;
 		width: 35%;
 	}
 	.grid-card-info {
-		height: 100%;
+		min-height: 100%;
 		border-left: 2px solid #9e4f60;
 		border-top: none;
 		width: 65%;
 	}
 }
 
-.main {
-	width: calc(min(90vw, 1100px));
-	display: flex;
-	margin-inline: auto;
-	border-radius: 15px;
-	overflow: hidden;
-}
-
-.page-description-container {
-	background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
-	background-size: 8px;
-	background-repeat: repeat-x;
-	background-color: #282727;
-	color: #ddd;
-	border-left: 3px solid #9e4f60;
-	width: 50%;
-
-	h2 {
-		font-size: 1.15rem;
-	}
-	h3 {
-		font-size: 0.9rem;
-	}
-	span {
-		font-size: 0.75rem;
-		display: block;
-		color: #999;
-	}
-}
-
-.page-img-container {
-	width: 50%;
-	flex: auto;
-	img {
-		height: 72vh;
-		width: 100%;
-		object-fit: cover;
-	}
-}
-
-@media (max-width: 768px) {
-	.main {
-		flex-direction: column;
-	}
-	.page-img-container {
-		width: 100%;
-		flex: auto;
-		img {
-			height: 35vh;
-		}
-	}
-	.page-description-container {
-		border-top: 3px solid #9e4f60;
-		border-left: none;
-		width: 100%;
-	}
-}
-
+// ListOfItems components
 .list-element {
-	color: #9e4f60 !important;
-	padding-block: 0.1rem;
+	color: #9e4f60 ;
+	margin-block: 0.5rem;
+	font-size: 0.9rem;
 }
 .list-element:hover {
-	color: rgb(183, 104, 121) !important;
+	color: rgb(183, 104, 121);
 	cursor: pointer;
 }
 
+@media (min-width: 768px) and (max-width: 992px) and (orientation: portrait) {
+	.grid-element-card {
+		height: 30vh;
+	}
+	.grid-card-info {
+		h4 {
+		font-size: 1.5rem;
+		}
+	}
+	.list-element {
+		font-size: 1rem;
+	}
+}
