--- a/src/components/SearchIcon/SearchIcon.scss
+++ b/src/components/SearchIcon/SearchIcon.scss
@@ -14,6 +14,8 @@
   padding: 6px 14.6px;
   background-color: transparent;
   border: 2px solid rgba(255, 255, 255, 0.3);
+  max-height: 40px;
+  max-width: 56px;
 }
 
 .search-icon-btn:focus {
