--- a/src/components/SearchIcon/SearchIcon.scss
+++ b/src/components/SearchIcon/SearchIcon.scss
@@ -1,30 +1,13 @@
-.search-icon-container {
-  display: flex;
-  justify-content: center;
-  border-radius: 0.375rem;
-  overflow: hidden;
-}
-
-.search-icon-container button:hover {
-  background-color: #424649 !important;
-  border-color: rgba(255, 255, 255, 0.3) !important;
-}
-
 .search-icon-btn {
-  padding: 6px 14.6px;
+  padding: 6px 17px;
   background-color: transparent;
   border: 2px solid rgba(255, 255, 255, 0.3);
   max-height: 40px;
   max-width: 56px;
-}
-
-.search-icon-btn:focus {
-  outline: none;
-}
-.search-icon-btn:focus-visible {
-  background-color: transparent !important;
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  /* color: white; */
+  border-radius: 0.375rem;
+  &:hover {
+    background-color: #424649;
+  }
 }
 
 @media (max-width: 576px) {
@@ -35,10 +18,8 @@
 }
 
 @media (min-width: 768px) {
-  .search-icon-container {
+  .search-icon-btn {
     grid-row: 1 / 2;
-  }
-  .search-icon-container button {
     margin-right: auto;
   }
 }
