--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -133,8 +133,8 @@
 	position: absolute;
 	bottom: 10%;
 	border-radius: 10px;
-	left: 44%;
-	width: 12%;
+	left: calc(50% - 16px);
+	width: 32px;
 	height: 2px;
 	box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
 		0 0 100px #03e9f4;
