--- a/src/components/SearchModal/SearchModal.scss
+++ b/src/components/SearchModal/SearchModal.scss
@@ -28,10 +28,10 @@
   font-size: 14px;
   background-color: #484848;
   color: white;
-  transition: background-color 0.2s;
+  transition: background-color 200ms linear;
 }
 .modal-search-btn:hover {
-  background-color: #3f6dac !important;
+  background-color: #3f6dac;
 }
 
 input[name='searchInput'] {
